--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,7 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </p>
+  <% if @user.password_required? %>
   <p>
     <%= f.label :password %><br />
     <%= f.password_field :password %>
@@ -22,6 +23,7 @@
   <p>
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
-  </p>   
+  </p>
+  <% end %>   
   <p class="button"><%= f.submit %></p>    
 <% end %>
