newly created accounts via omniauth are only allowed to delete their authentication if they have more than one (as their password & hash are nil); authentications merged into user accounts now delete the prior user account; updated to rescue BCrypt::Errors::InvalidSalt; routes updated to follow convention

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,11 @@
       <% unless current_user.email.nil? %>
         Signed in as <%= current_user.email %>.<br />
       <% end %>
-      Not you? <%= link_to "Sign out", log_out_path %>
+      Not you? <%= link_to "Sign out", sign_out_path %>
     <% else %>
-      <%= link_to "Sign In", authentications_path %>
+      Sign in via <%= link_to "Twitter", "auth/twitter" %> or 
+      <%= link_to "with a password", sign_in_path %><br/>
+      Want an account? Click here to <%= link_to "sign up", sign_up_path %>.
     <% end %>
   </div>
 
