--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -2,14 +2,22 @@
 
 <% if @authentications %>
   <% unless @authentications.empty? %>
-    <p><strong>You can sign in to this account using:</strong></p>
+    <p><strong>You are authenticated to this account using:</strong></p>
+    <% if Rails.env.development? %>
+      <p style="color:#333"><%= @authentications %></p>
+    <% end %>
+    <% if current_user.password.nil? && (@authentications.count == 1) %>  
+      <p style="color:#9F1D00">This account has a single authentication via <%= @authentications.last.provider %>. <br />To delete this authentication, you need to add at least one more.<br /></p>
+    <% end %>
     <div class="authentications">
       <% for authentication in @authentications %>
         <div class="authentication">
           <%= image_tag "https://github.com/intridea/authbuttons/raw/master/png/#{authentication.provider}_32.png", :size => "32x32" %>
           <div class="provider"><%= authentication.provider_name %></div>
           <div class="uid"><%= authentication.uid %></div>
-          <%= link_to "X", authentication, :confirm => 'Are you sure you want to remove this authentication option?', :method => :delete, :class => "remove" %>
+          <% unless (@authentications.count == 1) && authentication.user.password.nil? %>  
+            <%= link_to "X", authentication, :confirm => 'Are you sure you want to remove this authentication option?', :method => :delete, :class => "remove" %>
+          <% end %>
         </div>
       <% end %>
       <div class="clear"></div>
@@ -42,6 +50,6 @@
   <p>
     <strong>Don't use these services?</strong>
     <%= link_to "Sign up", sign_up_path %> or
-    <%= link_to "sign in", log_in_path %> with a password.
+    <%= link_to "sign in", sign_in_path %> with a password.
   </p>
 <% end %>
